--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -3,7 +3,7 @@
   color: #b0b0b0;
   margin: 0 auto;
   #header-about {
-    padding-top: 4%;
+    margin-top: -3%;
     background-image: url(../images/about/fs-bg.jpg);
     background-size: cover;
     width: 100%;
@@ -27,7 +27,7 @@
         padding-top: 15px;
       }
       .head-title {
-	      font-size: 2.3em;
+	      font-size: 2.2em;
 	      span {
 	        font-weight: bold;
 	        color: $primary-color;
@@ -37,16 +37,15 @@
   }
   .about-text {
     width: 100%;
-    text-align: center;
+    padding-top: 167px;
     .header-image {
       width: 50%;
-      text-align: left;
       display: inline-block;
       vertical-align: bottom;
     }
     .description {
       width: 50%;
-      text-align: left;
+      line-height: 1.4;
       display: inline-block;
       vertical-align: bottom;
     }
