--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -117,10 +117,9 @@ a {
 
 .logo-upper-left {
   position: absolute;
-  top: 15px;
-  left: 15px;
-  height: 11px;
-  width: 18%;
+  top: 35px;
+  left: 35px;
+  width: 278px;
   height: auto;
   z-index: 2;
 }
@@ -132,7 +131,7 @@ a {
   background-position: center center;
   background-repeat: no-repeat;
   height: 5em;
-  width: 5em;
+  width: 6em;
   padding: 2em;
   cursor: pointer;
   z-index: 2;
