--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -59,28 +59,33 @@
     text-align: center;
     margin: 0.8em;
     box-shadow: 0px 0px 2em gainsboro;
-    width: 15%;
+    width: 22%;
+    padding-bottom: 19px;
+    border: 1px solid #c7c7c7;
     .bio-image {
       position: relative;
       img { width: 100%; }
 		  .image-title {
-				font-size: 1.4em;
-				span {font-weight: bold;}
-				color: white;
-				position: absolute;
-				bottom: 1em;
-				text-align: left;
-				margin-left: 1em
+        font-size: 2em;
+        span {font-weight: bold;}
+        color: white;
+        position: absolute;
+        bottom: 1em;
+        text-align: left;
+        margin-left: 1em
 		  }
 		}
 		.short-bio {
 		  margin: 1em 1.5em;
-		  line-height: 1.8;
+      line-height: 1.8;
+      padding: 28px 12px 2px 12px;
+      text-align: left;
 		}
 		.bio-button {
 		  display: inline-block;
 		  color: $primary-color;
-		  border: 1px solid $primary-color;
+      border: 1px solid $primary-color;
+      font-size: 1.5em;
 		  padding: 0.4em 1em;
 		  border-radius: 1em;
 		  margin-bottom: 1em;
