--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -54,21 +54,6 @@ a {
   }
 }
 
-#review-navigator {
-  div {
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    border-style: solid;
-    border-width: 1px;
-    color: $primary-color;
-    display: inline-block;
-    &.selected {
-      background-color: $primary-color;
-    }
-  }
-}
-
 .left {
   float: left;
   width: 49%;
@@ -317,13 +302,73 @@ a {
 	max-width: 100%;
 }
 
+.navigation-arrows {
+  display: inline-block;
+  border: solid $primary-color;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  font-size: 4em;
+  width: 30px;
+  height: 30px;
+}
+
+#navigator-arrow-left {
+  transform: rotate(135deg);
+  margin-right: 22px;
+}
+
+#navigator-arrow-right {
+  transform: rotate(-45deg);
+  margin-left: 22px;
+  margin-left: -40px;
+}
+
+.review {
+  display: inline-block;
+}
+#review-navigator {
+  div {
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 1px;
+    color: $primary-color-darker-darker;
+    display: inline-block;
+    &.selected {
+      background-color: $primary-color-darker-darker;
+      box-shadow: -2px 2px 1px #888888;
+    }
+  }
+}
+
 .horizontal-break {
   background: linear-gradient(to bottom, #fbf9fa, #d4d2d3);
-  color: white;
+  color: gray;
   text-align: center;
   font-size: 1.5em;
   height: 300px;
-  padding: 20px 12px;
+  padding: 43px 12px;
+  review {
+    display: none;
+  }
+  selected {
+    display: inline-block;
+  }
+
+  p {
+    width: 840px;
+    text-align: left;
+    display: inline-block;
+    strong {
+      text-transform: uppercase;
+    }
+  }
+  img {
+    display: inline-block;
+    margin-right: 22px;
+  }
 }
 
 .learn-more {
@@ -351,7 +396,6 @@ a {
       margin: 0;
       font-size: .75em;
       opacity: .82;
-      line-spacing: 1.5;
     }
   }
 }
