--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -31,24 +31,28 @@ a {
 #contact-us {
   background-image: url(../images/contact-map.jpg);
   width: 100%;
-  height: 500px;
+  height: 553px;
   color: $grey;
   .contact-content {
-    width: 42%;
+    width: 57%;
     position: relative;
-    top: 85px;
-    left: 297px;
+    top: 20px;
+    left: 22px;
     .contact-header {
-      font-size: 2.2em;
+      font-size: 3.45em;
       background-color: white;
-      padding: 30px;
+      padding: 46px;
     }
     .contact-body {
-      background: rgba(255, 255, 255, 0.6);
-      padding: 53px;
+      background: rgba(255, 255, 255, 0.8);
+      padding: 23px 27px;
+      height: 333px;
       > ul {
         list-style-type: none;
         margin: 0;
+        > li {
+          padding: 12px;
+        }
       }
     }
   }
@@ -72,6 +76,10 @@ a {
 
 .preview-contents {
   padding: 8px;
+}
+
+.underline {
+  text-decoration: underline;
 }
 
 .preview-map {
@@ -397,7 +405,6 @@ a {
       margin-top: -5px;
       margin-left: 34px;
       font-size: 1.1em;
-      // opacity: .82;
     }
   }
 }
@@ -565,7 +572,7 @@ a {
     background-image: none;
     height: 340px;
     .contact-content {
-      width: 100%;
+      width: 52%;
       top: 0;
       left: 0;
       font-size: 1.2em;
