--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -30,6 +30,8 @@ a {
 
 #contact-us {
   background-image: url(../images/contact-map.jpg);
+  background-size: cover;
+  background-position: center center;
   width: 100%;
   padding: 20px;
   color: $grey;
@@ -207,31 +209,10 @@ a {
   }
 }
 
-.property-preview {
-  background-image: url(../images/carousel/property-preview-background.jpg);
-  width: 28%;
-  height: 350px;
-  margin: 22px;
-  font-family: $font-brand;
-  font-weight: lighter;
-  margin: 25px 42px;
-  opacity: .4;
-  &.selected {
-    transform: scale(1.3);
-    opacity: 1;
-    position: relative;
-    z-index: 4;
-  }
-}
-
 .preview-header {
   height: 50%;
   width: 100%;
 }
-
-// .padding-80 {
-//   padding: 80px;
-// }
 
 #header-home {
   position: relative;
