--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -116,11 +116,6 @@ a {
   vertical-align: middle;
 }
 
-.header-overlap {
-  margin-top: -35px;
-  background-color: white;
-}
-
 .logo-upper-left {
   position: absolute;
   top: 15px;
@@ -131,7 +126,27 @@ a {
   z-index: 2;
 }
 
+#top-nav {
+  color: white;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 3;
+  > ul {
+    list-style-type: none;
+    margin: 30px 30px 0 0;
+    > li {
+      display: inline;
+      font-size: 1.2em;
+      padding: 8px;
+      > a {
+        text-decoration: none;
+      }
+    }
+  }
+}
 .ham-menu {
+  display: none;
   background-color: white;
   background-image: url(../images/ham-menu.png);
   background-size: 40%;
@@ -142,14 +157,14 @@ a {
   padding: 2em;
   cursor: pointer;
   z-index: 2;
-  position: absolute;
-  right: 0;
-  top: 0;
+  position: fixed;
+  right: 10px;
+  top: 10px;
 }
 
 .nav-modal {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -196,16 +211,30 @@ a {
   }
 }
 
-.home-intro {
-  width: 45%;
+.home-intro-left {
+  width: 50%;
+  min-height: 300px;
+  background-color: white;
   font-family: $font-brand;
   color: #b4b3b3;
   letter-spacing: 0.5px;
   color: #858585;
   overflow: hidden;
   > div {
+    margin-top: -35px;
     padding: 80px;
+    > p {
+      min-height: 300px;
+    }
   }
+}
+
+.home-intro-right {
+  width: 50%;
+  background-image: url("../images/about-us.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
 .preview-header {
@@ -217,7 +246,6 @@ a {
   position: relative;
   background-image: url(../images/background.png);
   background-size: cover;
-  background-position: center center;
   background-repeat: no-repeat;
   text-align: center;
   height: 40vh;
@@ -541,13 +569,10 @@ a {
 
   .home-intro {
     width: 80%;
+    margin-top: 0;
     > div {
       padding: 10px;
     }
-  }
-
-  .header-overlap {
-    margin-top: 0;
   }
 
   #content {
