Change background position to center 0 so that text isn't cutoff on desktop or mobile view.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -254,6 +254,7 @@ a {
   background-image: url(../images/background.png);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center 0;
   text-align: center;
   height: 50vh;
 }
