--- a/src/app/listings.scss
+++ b/src/app/listings.scss
@@ -1,184 +1,61 @@
 @import "variables.scss";
 
 #container-listings {
-  font-size: 0.8vw;
-  background-color: $dark-background-color;
+  // background-image: url(../images/listings/background.png);
+  // opacity: .1;
+  .content {
+    max-width: 1800px;
+    margin: 0 auto;
 
-  strong {
-    font-weight: 700;
   }
-
-  #listings-content {
-    position: relative;
-    margin-top: -1046px;
-    margin-top: -110vh;
-  }
-
-  #gallery-arrow-left {
-    width: 44%;
-    margin-right: -5px;
-  }
-
-  #gallery-arrow-right {
-    width: 44%;
-  }
-
-  .gallery-controls {
-    width: 14%;
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-  }
-
-  .info-image-gallery {
-    width: 50%;
-    float: right;
-    position: relative;
-    > .gallery-controls {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-    }
-  }
-
-  .gallery-info {
-    width: 270px;
-  }
-
-  #header-listings {
-    background-image: url(../images/listings-bg.jpg);
-    &:after {
-      display: block;
-      content: " ";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      height: 100px;
-      width: 100%;
-      background-image: linear-gradient(to bottom, rgba($dark-background-color, 0), rgba($dark-background-color, 1));
-    }
-  }
-
-  #header-text-listings {
-    max-width: 90%;
-    text-align: left;
-    font-family: $font-brand;
-    color: $background-color;
-    font-size: 6em;
-    margin-left: 44px;
-  }
-
-  #listings-sidebar {
-    width: 33%;
-    padding: 0 12px;
-  }
-
-  #listings-info {
-    width: 66%;
-    padding: 0 12px;
-  }
-
-  .sidebar-header {
-    margin: 0;
-    padding: 10px 0;
-    font-weight: lighter;
-  }
-
-  .subdued {
-    opacity: .90;
-  }
-
-  .menu-top {
-    background-image: url(../images/listings-cta-bg.jpg);
-    padding: 30px;
-  }
-
-  .menu {
-    background-color: $primary-color;
-    padding-bottom: 12px;
-    font-weight: lighter;
-  }
-
-  .light-line {
-    border-style: solid;
-    opacity: .9;
-  }
-
-  .bond-list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    > li {
-      padding: 14px;
-      font-size: 1em;
-      font-weight: lighter;
-      opacity: .8;
-    }
-
-    > hr {
-      border-color: #c35440;
-      opacity: .5;
-      border-style: solid;
-    }
-  }
-
-  .menu {
-    color: $background-color;
-    font-family: $font-brand;
-    letter-spacing: $title-letter-spacing;
-    padding: 30px;
-  }
-
-  .info-text {
-    float: left;
-    font-weight: lighter;
-    width: 50%;
-    padding-right: 15px;
-  }
-
-  .info-box {
-    background-color: $primary-color;
+  .ham-menu {
     display: block;
-    padding: 30px;
-    color: white;
-    overflow: hidden;
-    margin-bottom: 24px;
-    h2:first-child {
-      margin-top: 0;
-    }
   }
-
-  .cool-button {
-    display: block;
-    padding: 14px 8px;
-    margin: 10px 0;
-    color: #fff;
-    border: 2px solid #fff;
+  .header {
+    margin-top: 200px;
     text-align: center;
-    outline: none;
-    text-decoration: none;
-    font-size: 1em;
-    &:hover {
-      color: $primary-color;
-      background-color: white;
+    > h4 {
+      font-size: 2.5em;
+    }
+    > p {
+      font-size: 1.2em;
+      margin: 0 15% 0 15%;
+      opacity: .9;
+    }
+    > input {
+      margin-top: 40px;
+      border-radius: 30px;
+      width: 350px;
+      height: 45px;
     }
   }
 
-  @media screen and (max-width: 768px) {
-    #content {
-      top: 1062px;
+  .submenu {
+    margin-top: 22px;
+    color: grey;
+    .plus-sign {
+      margin-right: 15px;
     }
+  }
 
-    #listings-content {
-      margin-top: -1700px;
-    }
+  .plus-sign {
+    border-color: lightgrey;
+    color: lightgrey;
+    border-style: solid;
+    border-width: thin;
+    height:20px;
+    width: 20px;
+    display: inline-block;
+  }
 
-    #listings-sidebar {
-      width: 90%;
-    }
+  .listings-preview {
+    width: 30%;
+  }
 
-    #listings-info {
-      width: 90%;
-    }
+  ::-webkit-input-placeholder {
+    color: $listings-text;
+    font-size:1.1em;
+    font-family: $font-brand;
+    line-height: 110%;
   }
 }
