--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -15,3 +15,4 @@ $title-letter-spacing: 1.3px;
 $breakpoint-small: 768px;
 $breakpoint-medium: 1600px;
 $listings-text: #de6c62;
+$brand-blue: #387ac8
