Remove duplicate variable declaration and provide some fallbacks.

--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -1,9 +1,8 @@
 $dark-background-color: #4c4c4c;
-$font-brand: Montserrat;
+$font-brand: Montserrat, Helvetica, Arial, sans-serif;
 $logo-small: 22px;
 $medium-image-height: 415px;
 $col-width: 530px;
-$font-brand: Montserrat;
 $background-color: white;
 $dark-background-color: #4c4c4c;
 $primary-color: #d46049;
