--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -18,6 +18,7 @@ body {
   margin: 0;
   width: 100%;
   font-family: $font-brand;
+  font-size: .8vw;
 }
 
 strong, b {
@@ -372,7 +373,6 @@ a {
   padding: 2%;
   padding-bottom: 10%;
   color: white;
-  font-size: 0.8vw;
   & > * { line-height: 2.2; }
   .column {
     font-size: 1.2em;
