Fix weird border issues with the input boxes --- solution is to make sure border-style is declared on the input, thanks Matt!

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -225,6 +225,7 @@ a {
         font-size: .9em;
         color: $primary-color-darker-darker;
         border-color: $primary-color-darker-darker;
+        border-style: solid;
         border-width: thin;
       }
     }
