--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -184,9 +184,6 @@ a {
     width: 443px;
     margin: 112px auto 0 auto;
     text-align: center;
-    border-style: solid;
-    border-width: thin;
-    border-color: lightgray;
     background-color: white;
     box-shadow: 5px 6px 14px #888888;
     position: relative;
@@ -203,6 +200,7 @@ a {
       margin: 36px;
       > p {
         font-size: 2em;
+        padding-top: 36px;
         font-weight: 100;
         color: #777777;
       }
@@ -211,7 +209,7 @@ a {
         margin: 0 auto 12px auto;
         width: 72%;
         height: 30px;
-        box-shadow: none !important;
+        opacity: .8;
         border-style: solid;
         border-width: thin;
         border-color: #efefef;
@@ -227,6 +225,7 @@ a {
         border-color: $primary-color-darker-darker;
         border-style: solid;
         border-width: thin;
+        margin-bottom: 50px;
       }
     }
   }
@@ -613,6 +612,20 @@ a {
   // hidden elements
   .small-hidden {
     display: none;
+  }
+
+  .contact-us-modal {
+    .contact-form {
+      width: 100%;
+      height: 100%;
+      margin-top: -33px;
+      .form {
+        margin: 0;
+        > p {
+          padding-top: 20px;
+        }
+      }
+    }
   }
 
   .home-intro-left {
