--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -48,6 +48,7 @@
 	}
 
 	.agent-details {
+		display: none;
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -60,26 +61,37 @@
 			width: 60vw;
 			margin: 300px auto 0 auto;
 			position: relative;
-			height: 600px;
-			.bio-pic {
-				position: absolute;
-				top: -3px;
-				left: -3px;
-				width: 200px;
-				height: 150px;
-			}
-			.contact {
-				margin: 0 auto;
-				max-width: 250px;
-				font-size: 1.4em;
-				> h4 {
-					color: black;
-					font-size: 1.8em;
-					padding-top: 32px;
+			box-shadow: 0px 0px 2em gainsboro;
+			.header {
+				position: relative;
+				margin-bottom: 5%;
+				.bio-pic {
+					position: absolute;
+					top: -3px;
+					left: -3px;
+					width: 28%;
+					height: 100%;
+				}
+				.contact {
+					margin-left: 38%;
+					font-size: 1.4em;
+					display: inline-block;
+					> h4 {
+						color: black;
+						font-size: 1.8em;
+					}
 				}
 			}
 			.bio {
 				margin: 0 36px 25px 36px;
+				color: black;
+				opacity: .55;
+				font-size: 1.3em;
+				line-height: 110%;
+				> h2 {
+					font-size: 1.8em;
+					opacity: 1;
+				}
 			}
 			.footer {
 				background-color: $primary-color;
@@ -91,11 +103,10 @@
 					width: 100%;
 					height: 100%;
 					margin: 0 auto;
+					display: flex;
 					.agent-featured-listing {
-						width: 33.3333333%;
-						float: left;
-						height: 100%;
-						// margin: -3px;
+						width: 33.33%;
+						height: 200px;
 					}
 				}
 			}
@@ -155,7 +166,8 @@
       font-size: 1.1em;
 		  padding: 0.4em 1em;
 		  border-radius: 1em;
-		  margin-bottom: 1em;
+			margin-bottom: 1em;
+			cursor: pointer;
 		}
 		.bio-contact {
 		  margin-bottom: 1em;
