--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -47,8 +47,12 @@
 		padding: 5px 20px;
 	}
 
-	.agent-details {
+	.bio-pic-mobile {
 		display: none;
+	}
+
+	.agent-details {
+		// display: none;
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -69,7 +73,6 @@
 					position: absolute;
 					top: -3px;
 					left: -3px;
-					width: 28%;
 					height: 100%;
 				}
 				.contact {
@@ -250,6 +253,70 @@
     .agent {
       width: 90%;
       font-size: 4em;
-    }
-  }
+		}
+
+		.bio-pic-mobile {
+			display: block;
+			width: 88%;
+			margin: 0 auto;
+		}
+
+		.agent-details {
+			overflow: scroll;
+			.content {
+				background-color: white;
+				width: 100%;
+				height: 100%;
+				margin: 0;
+				box-shadow: 0px 0px 2em gainsboro;
+				.header {
+					margin-bottom: 5%;
+					.bio-pic {
+					  display: none;
+					}
+					.contact {
+						width: 100%;
+						font-size: 3em;
+						margin: 0 auto;
+						text-align: center;
+						> h4 {
+							color: black;
+							font-size: 3.2em;
+						}
+					}
+				}
+				.bio {
+					margin: 25px;
+					padding: 0;
+					color: black;
+					opacity: .55;
+					font-size: 2.5em;
+					line-height: 110%;
+					> h2 {
+						opacity: 1;
+					}
+				}
+				.footer {
+					background-color: $primary-color;
+					color: white;
+					text-align: center;
+					font-size: 2em;
+					padding-top: 1px;
+					.featured-listings {
+						width: 100%;
+						height: 100%;
+						margin: 0;
+						display: flex;
+						flex-direction: row;
+  					flex-flow: row wrap;
+  					justify-content: center;
+						.agent-featured-listing {
+							width: 100%;
+						  height: 15%;
+						}
+					}
+				}
+			}
+		}
+	}
 }
