--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -427,6 +427,7 @@ a {
    position: absolute;
    top: 5px;
    right: 5px;
+   z-index: 10;
    color: $primary-color;
    width: 13px;
    height: 21px;
