--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -468,7 +468,9 @@ a {
     font-size: 5em;
   }
   .logo-upper-left {
-    width: 33%;
+    width: 46%;
+    top: 18px;
+    left: 14px;
   }
 
   .services-img {
