--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -163,15 +163,7 @@ a {
       top: 15px; left: 15px;
     }
     .menu-close {
-      background-color: white;
-      background-image: url(../images/menu-close.png);
-      background-size: 20px 20px;
-      background-position: center center;
-      background-repeat: no-repeat;
-      cursor: pointer;
-      padding: 30px;
-      position: absolute;
-      top: 0; right: 0;
+      @include close-button;
     }
 
     ul.nav {
@@ -424,13 +416,7 @@ a {
 }
 
 .simple-close {
-   position: absolute;
-   top: 11px;
-   right: 13px;
-   z-index: 10;
-   color: $primary-color;
-   cursor: pointer;
-   font-size: 2.4em;
+  @include close-button;
 }
 
 @media screen and (max-width: $breakpoint-medium) {
