Update margin so that copyright remains on its own line.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -564,7 +564,7 @@ a {
       margin-left: 5%;
       opacity: .9;
       &.copyright {
-        margin-top: 60px;
+        margin-top: 10%;
         margin-left: 3%;
       }
       &.social {
