--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -352,23 +352,24 @@ a {
 
 .navigation-arrows {
   position: absolute;
-  top: 50%;
+  top: 47%;
   border: solid $primary-color;
   border-width: 0 3px 3px 0;
   padding: 3px;
   font-size: 4em;
   width: 30px;
   height: 30px;
+  z-index: 12;
 }
 
-#navigator-arrow-left {
+.navigation-arrow-left {
   transform: rotate(135deg);
-  left: 0px;
+  left: 24px;
 }
 
-#navigator-arrow-right {
+.navigation-arrow-right {
   transform: rotate(-45deg);
-  right: 0px;
+  right: 24px;
 }
 
 .review-slideshow {
@@ -377,9 +378,6 @@ a {
   text-align: center;
   font-size: 1.5em;
   padding: 43px 12px;
-  .review {
-    display: none;
-  }
   .selected {
     display: inline-block;
     width: 70%;
