--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -6,7 +6,7 @@
 // endbower
 
 @import "vendor/sanitize.scss";
-// @import "listing.scss";
+@import "listing.scss";
 @import "listings.scss";
 @import "variables.scss";
 @import "mixins.scss";
