--- a/src/app/listing.scss
+++ b/src/app/listing.scss
@@ -12,17 +12,27 @@
     margin-top: -100px;
   }
 
-  #gallery-arrow-left {
-    width: 44%;
-    margin-right: -5px;
-  }
-
-  #gallery-arrow-right {
-    width: 44%;
-  }
-
   .container {
     display: flex;
+  }
+
+
+  .listing-image-gallery {
+    width: 50%;
+    float: right;
+    position: relative;
+    .gallery-navigation {
+      position: absolute;
+      bottom: 10px;
+    }
+    .gallery-arrow-right {
+      right: 10px;
+      width: 25px;
+    }
+    .gallery-arrow-left {
+      right: 35px;
+      width: 25px;
+    }
   }
 
   .gallery-controls {
@@ -32,16 +42,14 @@
     right: 10px;
   }
 
-  .info-image-gallery {
-    width: 50%;
-    float: right;
-    position: relative;
-    > .gallery-controls {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-    }
-  }
+  // .gallery-arrow-left2 {
+  //   width: 44%;
+  //   margin-right: -5px;
+  // }
+
+  // .gallery-arrow-right2 {
+  //   width: 44%;
+  // }
 
   .gallery-info {
     width: 270px;
