--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -520,7 +520,7 @@ a {
   background-color: $primary-color-lighter;
 }
 
-#footer {
+.footer {
   .inner {
     max-width: 1800px;
     margin: 0 auto;
@@ -768,7 +768,7 @@ a {
       }
     }
   }
-  #footer {
+  .footer {
     position: relative;
     background: $primary-color;
     padding: 2%;
