--- a/src/app/listing.scss
+++ b/src/app/listing.scss
@@ -14,6 +14,9 @@
 
   .container {
     display: flex;
+    position: relative;
+    flex-direction: row;
+    flex-flow: row wrap;
   }
 
 
@@ -180,20 +183,32 @@
   }
 
   @media screen and (max-width: 768px) {
+    .container {
+      font-size: 3.4em;
+    }
+
     #content {
       top: 1062px;
     }
 
     #listings-content {
-      margin-top: -1700px;
+      margin-top: -200px;
+    }
+
+    #header-text-listings {
+      font-size: 10em;
     }
 
     #listings-sidebar {
-      width: 90%;
+      width: 100%;
+      margin: 10px 0 0 0;
+      padding: 0;
     }
 
     #listings-info {
-      width: 90%;
+      width: 100%;
+      margin: 0;
+      padding: 0;
     }
   }
 }
