--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -658,6 +658,7 @@ a {
       width: 100%;
       height: 100%;
       margin-top: -33px;
+      font-size: 5em;
       .form {
         margin: 0;
         > p {
