More fine-tuning of the font-sizes.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -594,7 +594,7 @@ a {
 }
 @media screen and (max-width: $breakpoint-small) {
   body {
-    font-size: 1.4em;
+    font-size: .9em;
   }
 
   .nav-modal {
