Remove / from links.. temporarily place js inline.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -171,6 +171,10 @@ a {
   @include hamburger-menu;
 }
 
+.ham-menu-home {
+  display: none;
+}
+
 .contact-us-modal {
   display: none;
   position: fixed;
