--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -782,7 +782,7 @@ a {
         margin-left: 3%;
       }
       &.social {
-        margin: 0;
+        margin: 0 0 0 9px;
         display: block;
         float: left;
         > a {
