--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -74,7 +74,7 @@
 			position: relative;
 			max-width: 1400px;
 			background-color: white;
-			width: 85vw;
+			width: 60vw;
 			margin: 200px auto 0 auto;
 			box-shadow: 0px 0px 2em gainsboro;
 			font-size: 1.2em;
@@ -88,12 +88,11 @@
 				}
 				.contact {
 					margin-left: 34%;
-					font-size: 1.4em;
 					display: inline-block;
 					> h4 {
 						color: black;
 						font-size: 1.8em;
-						margin-bottom: 5px;
+						margin-bottom: 10px;
 					}
 				}
 			}
@@ -111,7 +110,7 @@
 				background-color: $primary-color;
 				color: white;
 				text-align: center;
-				padding-top: 1px;
+				padding: 1px 0 0 0;
 				.featured-listings {
 					width: 100%;
 					height: 100%;
