--- a/src/app/listing.scss
+++ b/src/app/listing.scss
@@ -204,5 +204,16 @@
     #header-text-listings {
       font-size: 4em;
     }
+    .listing-image-gallery {
+      width: 100%;
+    }
+    .info-text {
+      width: 100%;
+      margin-bottom: 5px;
+    }
+
+    .info-box {
+      margin-top: 24px;
+    }
   }
 }
